# gass-poll

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  seed.py  sheet.py  utils.py
backend/database/: database.py
backend/helpers/: auth.py  motor.py
backend/libs/: connection.py  utils.py
backend/parser/: auth.py  motor.py  rental.py
backend/resources/: auth.py  motor.py  rental.py  users.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/commons/: Button.tsx  Footer.tsx  InputField.tsx  LoadingScreen.tsx  Navbar.tsx  Pagination.tsx
frontend/src/components/modules/: MotorCard.tsx  MotorFormModal.tsx  RentModal.tsx  TransactionDetailModal.tsx
frontend/src/components/modules/LandingPage/: FAQ.tsx  Hero.tsx  HowItWorks.tsx  Testimonials.tsx
frontend/src/layouts/: AdminLayout.tsx  ClientLayout.tsx  MainLayout.tsx
frontend/src/libs/: apiInterface.ts
frontend/src/pages/: 404.tsx  About.tsx  ClientDashboard.tsx  ClientTransaction.tsx  LandingPage.tsx  Login.tsx  Register.tsx
frontend/src/pages/admin/: Dashboard.tsx  ManageMotors.tsx  ManageUsers.tsx
frontend/src/routes/: AdminRoute.tsx  GuestRoute.tsx  ProtectedRoute.tsx  index.tsx
frontend/src/styles/: index.css
