[project]
name = "gass-poll-backend"
version = "0.1.0"
description = "Backend for Gass-Poll Scooter Rental Website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "flask>=2.3.3",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-restful>=0.3.10",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
]
